--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Change Button Text</title>
+    <title>Kindle</title>
 </head>
 <body>
-    <!-- Button with inline JavaScript -->
-    <button onclick="this.innerHTML='Clicked!'">Click Me</button>
+    <button onclick="this.innerHTML=1-this.innerHTML">Click Me</button>
 </body>
 </html>
