--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Kindle</title>
 </head>
 <body>
-    <button onclick="this.innerHTML=1-this.innerHTML">Click Me</button>
+    <button onclick="this.innerHTML=1-this.innerHTML">1</button>
 </body>
 </html>
