--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Kindle</title>
 </head>
 <body>
-    <button onclick="this.innerHTML=1-this.innerHTML">1</button>
+    <button id="B1">1</button>
+    <script src="script.js"></script>
 </body>
 </html>
