added another button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <button id="B1">1</button>
+	<button id="B2">1</button>
     <script src="script.js"></script>
 </body>
 </html>
