added game logic

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Kindle</title>
+	<title>Kindle</title>
 </head>
 <body>
-    <button id="B1">1</button>
-	<button id="B2">1</button>
-    <script src="script.js"></script>
+	<input type="checkbox" id="C00">
+	<input type="checkbox" id="C01">
+	<input type="checkbox" id="C02">
+	<input type="checkbox" id="C03">
+	<br>
+	<input type="checkbox" id="C10">
+	<input type="checkbox" id="C11">
+	<input type="checkbox" id="C12">
+	<input type="checkbox" id="C13">
+	<br>
+	<input type="checkbox" id="C20">
+	<input type="checkbox" id="C21">
+	<input type="checkbox" id="C22">
+	<input type="checkbox" id="C23">
+	<br>
+	<input type="checkbox" id="C30">
+	<input type="checkbox" id="C31">
+	<input type="checkbox" id="C32">
+	<input type="checkbox" id="C33">
+	<br>
+	<p id="Steps">Steps:0</p>
+	<button id="Reset">Reset</button>
+	<script src="script.js"></script>
 </body>
 </html>
