edited file name for caching

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	<br>
 	<p id="Steps">Steps:0</p>
 	<button id="Reset">Reset</button>
-	<script src="script.js"></script>
+	<script src="scriptv1.js"></script>
 </body>
 </html>
