--- a/index.html
+++ b/index.html
@@ -105,18 +105,75 @@
     <title>Kindle</title>
 </head>
 <body>
-    <input type="checkbox" id="C00"> 
-	<p id="Steps">
-	Steps:0
-	</p>
+    <input type="checkbox" id="C00">
+	<input type="checkbox" id="C01">
+	<input type="checkbox" id="C02">
+	<input type="checkbox" id="C03">
+	<br>
+	<input type="checkbox" id="C10">
+	<input type="checkbox" id="C11">
+	<input type="checkbox" id="C12">
+	<input type="checkbox" id="C13">
+	<br>
+	<input type="checkbox" id="C20">
+	<input type="checkbox" id="C21">
+	<input type="checkbox" id="C22">
+	<input type="checkbox" id="C23">
+	<br>
+	<input type="checkbox" id="C30">
+	<input type="checkbox" id="C31">
+	<input type="checkbox" id="C32">
+	<input type="checkbox" id="C33">
+	<br>
+	<p id="Steps">Steps:0</p>
+	<button id="Reset">Reset</button>
     <script>
 		const C00 = document.getElementById("C00");
+		const C01 = document.getElementById("C01");
+		const C02 = document.getElementById("C02");
+		const C03 = document.getElementById("C03");
+		const C10 = document.getElementById("C10");
+		const C11 = document.getElementById("C11");
+		const C12 = document.getElementById("C12");
+		const C13 = document.getElementById("C13");
+		const C20 = document.getElementById("C20");
+		const C21 = document.getElementById("C21");
+		const C22 = document.getElementById("C22");
+		const C23 = document.getElementById("C23");
+		const C30 = document.getElementById("C30");
+		const C31 = document.getElementById("C31");
+		const C32 = document.getElementById("C32");
+		const C33 = document.getElementById("C33");
+		const Checkboxes=[[C00,C01,C02,C03],[C10,C11,C12,C13],[C20,C21,C22,C23],[C30,C31,C32,C33]]
+		
 		const Score = document.getElementById("Steps");
 		var stepCount=0;
 		C00.addEventListener('change', function() {
 			stepCount++;
             Score.innerHTML = "Steps:"+stepCount;
         });
+		Checkboxes.forEach(function(Checkboxrow) {
+			Checkboxrow.forEach(function(Check) {
+				Check.addEventListener('change', function() {
+					var row=Number(this.id.substring(1,2));
+					var column=Number(this.id.substring(2,3));
+					if(row>0){
+						Checkboxes[row-1][column].checked=!Checkboxes[row-1][column].checked;
+				}
+					if(column<3){
+						Checkboxes[row][column+1].checked=!Checkboxes[row][column+1].checked;
+					}
+					if(row<3){
+						Checkboxes[row+1][column].checked=!Checkboxes[row+1][column].checked;
+					}
+					if(column>0){
+						Checkboxes[row][column-1].checked=!Checkboxes[row][column-1].checked;
+					}
+					stepCount++;
+					Steps.innerHTML="Steps:"+stepCount;
+				});
+			});
+		});
 	</script>
 </body>
 </html>
