--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
 						});
 					});
 					if(win){
-						//setTimeout(function() {
-							alert("You won in "+stepCount+" steps, Try again?");
+							Steps.innerHTML="You won in "+stepCount+" steps";
 							Reset.click();
-						//}, 10);
 					}
 				});
 			});
