--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					var win=true;
 					Checkboxes.forEach(function(Checkboxrow) {
 						Checkboxrow.forEach(function(Check) {
-							win&&=Check.checked;
+							//win&&=Check.checked;
 						});
 					});
 					if(win){
@@ -90,7 +90,7 @@
 			stepCount=0;
 			Steps.innerHTML="Steps:"+stepCount;
 		});
-		Reset.click();
+		//Reset.click();
 	</script>
 </body>
 </html>
