--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			stepCount=0;
 			Steps.innerHTML="Steps:"+stepCount;
 		});
-		//Reset.click();
+		Reset.click();
 	</script>
 </body>
 </html>
