--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 					});
 					if(win){
 							Steps.innerHTML="You won in "+stepCount+" steps";
+							alert("You won in "+stepCount+" steps, Try again?");
 					}
 				});
 			});
