--- a/index.html
+++ b/index.html
@@ -8,21 +8,31 @@
 	<input type="checkbox" id="C01">
 	<input type="checkbox" id="C02">
 	<input type="checkbox" id="C03">
+	<input type="checkbox" id="C04">
 	<br>
 	<input type="checkbox" id="C10">
 	<input type="checkbox" id="C11">
 	<input type="checkbox" id="C12">
 	<input type="checkbox" id="C13">
+	<input type="checkbox" id="C14">
 	<br>
 	<input type="checkbox" id="C20">
 	<input type="checkbox" id="C21">
 	<input type="checkbox" id="C22">
 	<input type="checkbox" id="C23">
+	<input type="checkbox" id="C24">
 	<br>
 	<input type="checkbox" id="C30">
 	<input type="checkbox" id="C31">
 	<input type="checkbox" id="C32">
 	<input type="checkbox" id="C33">
+	<input type="checkbox" id="C34">
+	<br>
+	<input type="checkbox" id="C40">
+	<input type="checkbox" id="C41">
+	<input type="checkbox" id="C42">
+	<input type="checkbox" id="C43">
+	<input type="checkbox" id="C44">
 	<br>
 	<p id="Steps">Steps:0</p>
 	<button id="Reset">Reset</button>
@@ -31,19 +41,28 @@
 		const C01 = document.getElementById("C01");
 		const C02 = document.getElementById("C02");
 		const C03 = document.getElementById("C03");
+		const C03 = document.getElementById("C04");
 		const C10 = document.getElementById("C10");
 		const C11 = document.getElementById("C11");
 		const C12 = document.getElementById("C12");
 		const C13 = document.getElementById("C13");
+		const C03 = document.getElementById("C14");
 		const C20 = document.getElementById("C20");
 		const C21 = document.getElementById("C21");
 		const C22 = document.getElementById("C22");
 		const C23 = document.getElementById("C23");
+		const C03 = document.getElementById("C24");
 		const C30 = document.getElementById("C30");
 		const C31 = document.getElementById("C31");
 		const C32 = document.getElementById("C32");
 		const C33 = document.getElementById("C33");
-		const Checkboxes=[[C00,C01,C02,C03],[C10,C11,C12,C13],[C20,C21,C22,C23],[C30,C31,C32,C33]]
+		const C03 = document.getElementById("C34");
+		const C30 = document.getElementById("C40");
+		const C31 = document.getElementById("C41");
+		const C32 = document.getElementById("C42");
+		const C33 = document.getElementById("C43");
+		const C03 = document.getElementById("C44");
+		const Checkboxes=[[C00,C01,C02,C03,C04],[C10,C11,C12,C13,C14],[C20,C21,C22,C23,C24],[C30,C31,C32,C33,C34],[C40,C41,C42,C43,C44]]
 		
 		const Steps = document.getElementById("Steps");
 		const Reset = document.getElementById("Reset");
